# toolbox

./: api.yml  main.py  openapi_simple.yaml  pyproject.toml  readme.md  requirements.txt  run_api_test.py  runalltests.sh  testdata.yml  userstat.yml
.github/workflows/: deploy_and_test.yml
apitester/: io.py  testsequence.py
common/: apitester.py  exception.py  io.py
data/apitester/: authentication.yml  example_sources.txt  openapi_petstore.yaml
data/userstat/: data_2024-12-01.txt  data_2024-12-02.txt  data_2024-12-03.txt  data_2024-12-04.txt  data_2024-12-05.txt  data_2024-12-06.txt  data_2024-12-07.txt  data_2024-12-08.txt  data_2024-12-09.txt  data_2024-12-10.txt
internal/: io.py  yml.py
nnet/: architecture.py  operations.py
statistics/: ml.py
statistics/nnet/: operations.py
statistics/nnet/conv/: convnet.py
test/: test_ml.py  test_nnet.py  test_userstat.py
userstat/: au.py  main.py
