[project]
name = "toolbox"
version = "1.0.0"
requires-python = ">=3.12"
description = "A set of tools for various tasks"
readme = "readme.md"
dependencies = [
    "requests==2.32.4",
    "pyYAML==6.0.2",
    "aiohttp==3.12.13",
    "asyncio==3.4.3",
    "argparse==1.4.0",
    "numpy==1.26.0",
    "matplotlib==3.9.3",
    "huggingface_hub==0.33.0",
    "ipython==9.3.0",
]

